Fix Thrive Text in Home Hero on Small. #53

--- a/src/assets/scss/templates/_front.scss
+++ b/src/assets/scss/templates/_front.scss
@@ -17,6 +17,10 @@
 						
 						font-size: 16px !important;
 						
+						&.remachinescript {
+							font-size: 32px !important;
+						}
+						
 					}
 					
 				}
